# svg-inline-mkdocs-plugin

./: README.md  how-to-publish.txt  pyproject.toml
mkdocs_inline_select_svg_plugin/: __init__.py  plugin.py
