[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-inline-select-svg-plugin"
description = "A MkDocs plugin that inlines SVG images matching a pattern into the output without inlining Materials theme icons."
readme = "README.md"
license = "Apache-2.0"
keywords = ["mkdocs", "mkdocs-plugin", "plugin", "svg"]
authors = [
    { name = "Mike Samuel", email = "mikesamuel@gmail.com" },
]
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "mkdocs >=1.4.0",
    "beautifulsoup4 >=4.12.0",
    "lxml >=4.9.3",
]

[project.urls]
Source = "https://github.com/temperlang/svg-inline-mkdocs-plugin"

[project.entry-points."mkdocs.plugins"]
inline-select-svg = "mkdocs_inline_select_svg_plugin.plugin:MkdocsInlineSelectSvgPlugin"
